# tricycle_pose_estimator

./: README.md
data/: plot_csv.py  ros_bag_utils.py
data/processed/: trike_circle_extracted_inputs.csv  trike_circle_extracted_truth.csv  trike_circle_generated_outputs.csv  trike_straight_extracted_inputs.csv  trike_straight_extracted_truth.csv  trike_straight_generated_outputs.csv
python/: combined_test_data.csv  kalmanfilter.py  sim_estimation.py  test.py  tricycle_model.py
python/classes/: __init__.py  ekf.py  model_tricycle.py
python/utils/: ros_bag_utils.py  utils.py
python/utils/bag_includes/: combined_test_data.csv  imu_data.csv  joint_data.csv  new_bag.bag
tricycle_description/: CMakeLists.txt  package.xml
tricycle_description/config/: tricycle_config.urdf.xacro
tricycle_description/launch/: launch_tricycle.launch  launch_tricycle_sim.launch
tricycle_description/models/Brain_Tricycle_V2/: model.config  model.sdf  model.sdf.bk
tricycle_description/models/TricycleBase/: model.config  model.sdf
tricycle_description/plugins/: TricycleDriveModPlugin.cpp  TricycleDriveModPlugin.h
tricycle_description/robots/: brain_tryke.urdf.xacro
tricycle_description/urdf/: links.urdf.xacro
tricycle_description/worlds/: basic.world
